--- a/WebHookServer/Views/WebHooks/Register.cshtml
+++ b/WebHookServer/Views/WebHooks/Register.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label for="receiverKey">Secret:</label>
-                <input type="text" name="secretKey" id="secretKey" class="form-control" required value="@Guid.NewGuid()" placeholder="Secret Key" />
+                <input type="text" name="secretKey" id="secretKey" class="form-control" required value="12345678901234567890123456789012" placeholder="Secret Key" />
             </div>
             <div class="form-group">
                 <label for="receiverKey">Description:</label>
